force-app/main/default/objects/Opportunity/fields/destination__c.field-meta.xml
<CustomField>
    <fullName>destination__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Destination</label>
    <length>50</length>
    <type>Text</type>
</CustomField>