force-app/main/default/objects/Opportunity/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End date</label>
    <type>Date</type>
</CustomField>