force-app/main/default/objects/Opportunity/fields/numberOfParticipants__c.field-meta.xml
<CustomField>
    <fullName>numberOfParticipants__c</fullName>
    <label>numberOfParticipants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>