force-app/main/default/objects/Opportunity/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <label>startDate</label>
    <type>Date</type>
</CustomField>