force-app/main/default/objects/Opportunity/fields/totalCost__c.field-meta.xml
<CustomField>
    <fullName>totalCost__c</fullName>
    <label>totalCost</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>